update npm keywords

--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "grunt": "~0.4.5"
   },
   "keywords": [
-    "gruntplugin"
+    "gruntplugin",
+    "requirejs",
+    "concat",
+    "inject"
   ]
 }
