--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-requirejs-injector",
   "description": "Inject RequireJS dependencies on definition.",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "homepage": "https://github.com/cuarti/grunt-requirejs-injector",
   "author": {
     "name": "Albert Cuartiella",
@@ -26,12 +26,14 @@
   "scripts": {
     "test": "grunt test"
   },
+  "dependencies": {
+    "requirejs": "^2.1.17"
+  },
   "devDependencies": {
     "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-nodeunit": "^0.3.3",
-    "grunt": "~0.4.5",
-    "requirejs": "~2.1.17"
+    "grunt": "~0.4.5"
   },
   "peerDependencies": {
     "grunt": "~0.4.5"
