update keywords to only gruntplugin to find it with grunt plugins

--- a/package.json
+++ b/package.json
@@ -39,9 +39,6 @@
     "grunt": "~0.4.5"
   },
   "keywords": [
-    "gruntplugin",
-    "requirejs",
-    "concat",
-    "inject"
+    "gruntplugin"
   ]
 }
